--- a/views/user.ejs
+++ b/views/user.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>User login</title>
+    <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
@@ -15,15 +15,10 @@
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/">Shop</a></li>
                 <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
-                <li class="main-header__item"><a class="active" href="/users">User Login</a></li>
             </ul>
         </nav>
     </header>
-
-    <main>
-        <h1>User Login</h1>
-        <p>This is where the user would login..</p>
-    </main>
+    <h1><%= pageTitle %> for later functionality.</h1>
 </body>
 
 </html>
