--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,6 +4,8 @@
 
 <body>
     <%- include('includes/nav.ejs') %>
-    <h1>Page Not Found!</h1>
+    <main>
+        <h1>Page Not Found!</h1>
+    <main>
 
 <%- include('includes/footer.ejs') %>
