--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,4 +1,4 @@
-<%- include('includes/header.ejs') %>
+<%- include('../includes/header.ejs') %>
 
 <link rel="stylesheet" href="/css/forms.css">
 <link rel="stylesheet" href="/css/product.css">
@@ -6,9 +6,11 @@
 </head>
 
 <body>
-    <%- include('includes/nav.ejs') %>
+    <%- include('../includes/nav.ejs') %>
 
     <main>
+        <h1><%= pageTitle %></h1>
+        
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
@@ -19,4 +21,4 @@
         </form>
     </main>
 
-<%- include('includes/footer.ejs') %>
+<%- include('../includes/footer.ejs') %>
