Various amends for Storing & Displaying product data

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,10 +76,13 @@ main {
 
 .card__image {
   width: 100%;
+  text-align: center;
 }
 
 .card__image img {
-  width: 100%;
+  margin:0 auto;
+  width: 200px;
+  height: auto;
 }
 
 .card__actions {
