--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -24,7 +24,9 @@
                         <p class="product__description"><%= prod.description %></p>
                     </div>
                     <div class="card__actions">
-                        <button class="btn">Add to Cart</button>
+                        <form action="/add-to-cart" method="post">
+                            <button type="submut" class="btn">Add to Cart</button>
+                        </form>
                     </div>
                 </article>
                 <% } %>
