--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,40 +1,43 @@
-<%- include('../includes/header.ejs') %>
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css">
+    </head>
 
-<link rel="stylesheet" href="/css/product.css">
+    <body>
+        <%- include('../includes/navigation.ejs') %>
 
-</head>
+            <main>
+                <% if (prods.length > 0) { %>
+                    <div class="grid">
+                        <% for (let product of prods) { %>
+                            <article class="card product-item">
+                                <header class="card__header">
+                                    <h1 class="product__title">
+                                        <%= product.title %>
+                                    </h1>
+                                </header>
+                                <div class="card__image">
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                </div>
+                                <div class="card__content">
+                                    <h2 class="product__price">$
+                                        <%= product.price %>
+                                    </h2>
+                                    <p class="product__description">
+                                        <%= product.description %>
+                                    </p>
+                                </div>
+                                <div class="card__actions">
+                                    <a href="/admin/edit-product" class="btn">Edit</a>
+                                    <form action="/admin/delete-product" method="POST">
+                                        <button class="btn" type="submit">Delete</button>
+                                    </form>
 
-<body>
-    <%- include('../includes/nav.ejs') %>
-
-    <main>
-        <div class="grid">
-            <% if(prods.length > 0) { %>
-                <% for(let prod of prods) { %>
-                <article class="card product-item">
-                    <header class="card__header">
-                        <h1 class="product__title"><%= prod ? prod.title : 'Default' %></h1>
-                    </header>
-                    <div class="card__image">
-                        <img src="<%= prod.imageUrl %>"
-                            alt="<%= prod.title %>">
+                                </div>
+                            </article>
+                            <% } %>
                     </div>
-                    <div class="card__content">
-                        <h2 class="product__price">$<%= prod.price %></h2>
-                        <p class="product__description"><%= prod.description %></p>
-                    </div>
-                    <div class="card__actions">
-                        <a href="/admin/edit-product" class="btn">Edit</a>
-                        <form action="/admin/delete-product" method="post">
-                            <button type="submit" class="btn">Delete</button>
-                        </form>
-                    </div>
-                </article>
-                <% } %>
-            <% } else { %>
-                <h1>No products found</h1>
-            <% } %>
-        </div>
-    <main>
-
-<%- include('../includes/footer.ejs') %>
+                    <% } else { %>
+                        <h1>No Products Found!</h1>
+                        <% } %>
+            </main>
+            <%- include('../includes/end.ejs') %>
