--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,14 +1,6 @@
-<%- include('../includes/header.ejs') %>
+<%- include('../includes/head.ejs') %>
+    </head>
 
-<link rel="stylesheet" href="/css/product.css">
-
-</head>
-
-<body>
-    <%- include('../includes/nav.ejs') %>
-
-    <main>
-        <h1><%= pageTitle %></h1>
-    <main>
-
-<%- include('../includes/footer.ejs') %>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <%- include('../includes/end.ejs') %>
