--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,37 +1,34 @@
-<%- include('../includes/header.ejs') %>
-
-<link rel="stylesheet" href="/css/product.css">
-
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <%- include('../includes/nav.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <div class="grid">
-            <% if(prods.length > 0) { %>
-                <% for(let prod of prods) { %>
-                <article class="card product-item">
-                    <header class="card__header">
-                        <h1 class="product__title"><%= prod ? prod.title : 'Default' %></h1>
-                    </header>
-                    <div class="card__image">
-                        <img src="<%= prod.imageUrl %>"
-                            alt="<%= prod.title %>">
-                    </div>
-                    <div class="card__content">
-                        <h2 class="product__price">$<%= prod.price %></h2>
-                        <p class="product__description"><%= prod.description %></p>
-                    </div>
-                    <div class="card__actions">
-                        <button class="btn">Add to Cart</button>
-                    </div>
-                </article>
+        <% if (prods.length > 0) { %>
+            <div class="grid">
+                <% for (let product of prods) { %>
+                    <article class="card product-item">
+                        <header class="card__header">
+                            <h1 class="product__title"><%= product.title %></h1>
+                        </header>
+                        <div class="card__image">
+                            <img src="<%= product.imageUrl %>"
+                                alt="<%= product.title %>">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="product__price">$<%= product.price %></h2>
+                            <p class="product__description"><%= product.description %></p>
+                        </div>
+                        <div class="card__actions">
+                            <button class="btn">Add to Cart</button>
+                        </div>
+                    </article>
                 <% } %>
-            <% } else { %>
-                <h1>No products found</h1>
-            <% } %>
-        </div>
-    <main>
-
-<%- include('../includes/footer.ejs') %>
+            </div>
+        <% } else { %>
+            <h1>No Products Found!</h1>
+        <% } %>
+    </main>
+<%- include('../includes/end.ejs') %>
